# osutify

./: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json  types.ts
.github/: README.md
.github/workflows/: auto-label.json5  auto-label.yml
app/: layout.tsx
app/(site)/: page.tsx
app/(site)/components/: PageContent.tsx
app/actions/: getPacks.ts  getSongs.ts  utils.ts
app/api/getSongAudio/: route.ts
app/api/getSongsByIds/: route.ts
app/hooks/: usePlayer.ts
app/liked/: page.tsx
app/liked/components/: LikedContent.tsx
app/playlist/[tag]/: page.tsx
app/playlist/[tag]/components/: PlaylistContent.tsx
app/search/: page.tsx
app/search/components/: SearchContent.tsx
components/: Greeting.tsx  Header.tsx  Input.tsx  Library.tsx  MediaItem.tsx  Player.tsx  PlayerContent.tsx  SearchInput.tsx  Sidebar.tsx  Slider.tsx
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx
src/app/(site)/: page.tsx
src/app/(site)/components/: PageContent.tsx
src/app/actions/: getPack.ts  getPacks.ts  getSongs.ts  getSongsByIds.ts  getSongsByQuery.ts  utils.ts
src/app/api/getSongAudio/: route.ts
src/app/api/getSongsByIds/: route.ts
src/app/hooks/: useOnPlay.ts  usePlayer.ts
src/app/liked/: page.tsx
src/app/search/: page.tsx
src/components/: Greeting.tsx  Header.tsx  LikeButton.tsx  ListItem.tsx  MediaItem.tsx  Player.tsx  PlayerContent.tsx  SearchInput.tsx  Sidebar.tsx
src/generated-types/: index.d.ts
(+4 files in other folders)
